--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   },
   "dependencies": {
     "@godaddy/terminus": "^4.12.1",
-    "@liaoliaots/nestjs-redis-health": "^9.0.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.5",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.4.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.4.1",
@@ -36,6 +37,7 @@
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.0",
     "typeorm": "^0.3.20",
     "webpack": "^5.95.0"
   },
