--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.5",
+    "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.4.1",
     "pg": "^8.13.0",
+    "prisma": "^5.21.1",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
