--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@godaddy/terminus": "^4.12.1",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -34,11 +35,14 @@
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.5",
     "@prisma/client": "^5.21.1",
+    "@types/ejs": "^3.0.3",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ejs": "^3.1.2",
     "ioredis": "^5.4.1",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
