--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "passport-local": "^1.0.0",
     "pg": "^8.13.0",
     "prisma": "^5.21.1",
+    "qrcode": "^1.5.4",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.0",
+    "speakeasy": "^2.0.0",
     "typeorm": "^0.3.20",
     "webpack": "^5.95.0"
   },
@@ -63,6 +65,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/qrcode": "^1.5.5",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
